# sistemi-operativi

./: .gitignore  AUTHORS.txt  CMakeLists.txt  Makefile  README.md  umps.cmake
lib/: CMakeLists.txt  hash.h  hashtable.h  pandos_types.h
phase1/: CMakeLists.txt  ash.c  ash.h  ns.c  ns.h  pcb.c  pcb.h
phase1/p1test/: CMakeLists.txt  p1test.c
